--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <button onclick="inputValueOfFloat()">Thêm số</button> <br />
             <!-- <input type="text" id="outputValue" value="mãng giá trị" readonly /> -->
             <span id="outputArrayOfFloat"></span> <br />
-            <button onclick="findInteger()">tìm số nguyên tố</button>
+            <button onclick="findInteger()">tìm số nguyên</button>
           </div>
           <div class="function__item">
             <button onclick="compare()">Compare</button>
